%% Verificado el 2026-08-16 contra Livestock 20260809165838_AddTreatmentApplicationPlausibilityConfirmed
%% Auditoría commit 10 (docs/reestructura-documentacion): EVENT_TYPES nunca fue tabla —
%% `animal_events.event_type` es varchar libre, sin catalogo respaldando el codigo; se retira
%% (no hay fase que la comprometa). ATTACHMENTS no existe; esta comprometida para Fase 4
%% (`feature/shared-attachments`, docs/spec/plan-0003-fase-4/spec.md sec. "Bloque 4.A") y se marca
%% FUTURO en vez de borrarse. `animal_events` gano columnas de Fase 3.5 (group_id, cause_id,
%% route_id, batch_id, health_plan_item_id, migrated_to_course_id, applied_by_user_id) que no
%% tenian tabla propia dibujada aqui — el CHECK animal_id XOR group_id que Nucleo 2 dejo como
%% gancho sin construir (DATA-MODEL.md, estado 2026-08-05) SI esta implementado hoy.
%% `withdrawal_periods` cambio de forma: `product_type`+`treatment_event_id` reemplazados por
%% `target`+`event_id`/`treatment_course_id` (XOR), y `status` no es columna (se deriva de `ends_at`).
erDiagram
    %% ============================================
    %% NUCLEO 2: EVENTOS - el corazon del sistema
    %% Art. 1 y 4: append-only, inmutable, JSONB
    %% ============================================

    ANIMALS |o--o{ ANIMAL_EVENTS : "protagoniza (opcional)"
    ANIMAL_GROUPS |o--o{ ANIMAL_EVENTS : "evento grupal (opcional; XOR con animal_id)"
    USERS |o--o{ ANIMAL_EVENTS : "registrado por"
    ANIMAL_EVENTS |o--o{ ANIMAL_EVENTS : "corregido por (related_event_id)"
    ANIMAL_EVENTS |o--o{ WITHDRAWAL_PERIODS : "tratamiento genera (event_id, opcional)"
    ANIMALS ||--o{ WITHDRAWAL_PERIODS : "bloqueado por"

    %% FUTURO — Fase 4 (feature/shared-attachments, docs/spec/plan-0003-fase-4/spec.md)
    ANIMAL_EVENTS ||--o{ ATTACHMENTS : "documentado por"

    ANIMAL_EVENTS {
        uuid id PK "UUID generable offline en el movil"
        uuid animal_id FK "nullable; XOR con group_id (CK_AnimalEvent_AnimalXorGroup)"
        uuid group_id FK "nullable; evento aplicado a todo un grupo — implementado (Fase 3.5)"
        varchar event_type "weighing, treatment, vaccination, movement, disposal, correction... (texto libre, sin catalogo)"
        timestamptz occurred_at "cuando paso en la finca"
        uuid recorded_by_id FK "nullable"
        varchar recorded_by_label "nombre libre; sobrevive si el usuario se borra"
        numeric cost "decimal, jamas float; nullable"
        jsonb payload_json "datos especificos del tipo de evento"
        uuid related_event_id FK "nullable; correccion referencia al original"
        int affected_count "nullable; cuantos animales de un evento grupal (CHECK > 0)"
        uuid cause_id FK "nullable; a mortality_causes (Nucleo 6, catalogo aparte)"
        uuid route_id FK "nullable; a administration_routes (Nucleo 6)"
        varchar reason "nullable; scheduled/curative/preventive"
        uuid batch_id FK "nullable; lote de inventario consumido"
        uuid health_plan_item_id FK "nullable; cronograma cumplido (Nucleo 6)"
        uuid applied_by_user_id FK "nullable; distinto de recorded_by"
        uuid migrated_to_course_id FK "nullable; puente de migracion al modelo treatment_courses"
        timestamptz created_at
    }

    WITHDRAWAL_PERIODS {
        uuid id PK
        uuid animal_id FK
        uuid event_id FK "nullable; XOR con treatment_course_id"
        uuid treatment_course_id FK "nullable; XOR con event_id (Nucleo 6)"
        varchar target "milk / meat / both (columna real: target, no product_type)"
        date starts_at
        date ends_at "hasta aqui NO se vende; status activo/completado se deriva de esta fecha"
        timestamptz created_at
    }

    %% FUTURO — Fase 4 (feature/shared-attachments, ADR-0010 de esa fase, tabla `attachments`)
    ATTACHMENTS {
        uuid id PK
        varchar entity_type "animal_event / sale / purchase..."
        uuid entity_id "referencia polimorfica"
        varchar file_path
        varchar file_name
        varchar mime_type
        text description "guia de movilizacion, factura vet, certificado pajuela"
        uuid uploaded_by FK
        timestamptz created_at
    }

    ANIMALS {
        uuid id PK
    }
    ANIMAL_GROUPS {
        uuid id PK
    }
    USERS {
        uuid id PK
    }
